fix: extend compatibility to JetBrains Idea 2025.3.X and replace deprecated API usage for plugin availability check (#13)
* fix: extend compatibility to JetBrains Rider 2025.3.X and replace deprecated API usage for plugin availability check